# stm32g4_library

./: .cproject  .mxproject  .project  CMakeLists.txt  STM32G473QETX_FLASH.ld  STM32G473QETX_RAM.ld  stm32g4.ioc
Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
cmake/: STM32G4_FreeRTOS_Lib.pc.in  Template.pc.in
